fix(core): fix wrong label alignment

--- a/core/src/components/cat-label/cat-label.scss
+++ b/core/src/components/cat-label/cat-label.scss
@@ -2,7 +2,13 @@
 @use 'mixins' as *;
 
 :host {
-  display: block;
+  display: inline-flex;
+  align-items: center;
+  min-height: 2.5rem;
+}
+
+:host([hidden]) {
+  display: none;
 }
 
 .input-optional {
